@@ -4,13 +4,16 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.List;
 
+import javax.persistence.criteria.CriteriaBuilder.In;
 import javax.servlet.ServletException;
 import javax.servlet.annotation.MultipartConfig;
 import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpSession;
 import javax.servlet.http.Part;
 
 import Dao.DaoMenu;
@@ -50,14 +53,23 @@ public class updateMenuManager extends HttpServlet {
 	protected void doGet(HttpServletRequest request, HttpServletResponse response)
 			throws ServletException, IOException {
 		try {
-
-			int id = Integer.parseInt(request.getParameter("id"));
-			menu = this.daomenu.findbyid(id);
-			request.setAttribute("menu", menu);
-            request.getRequestDispatcher("/views/Manager/EditFoodManager.jsp").forward(request, response);
+            listCategorey(request,response);
+			request.getRequestDispatcher("/views/Manager/EditFoodManager.jsp").forward(request, response);
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
+	}
+	
+
+	private void listCategorey(HttpServletRequest request, HttpServletResponse response) {
+	
+		int id = Integer.parseInt(request.getParameter("id"));
+		menu = this.daomenu.findbyid(id);
+		request.setAttribute("menu", menu);
+		List<LoaiMenu> lstLoai = daoloai.getall();
+		request.setAttribute("listCC", lstLoai);
+
+		
 	}
 
 	/**
@@ -69,26 +81,33 @@ public class updateMenuManager extends HttpServlet {
 		try {
 			response.setContentType("text/html;charset=UTF-8");
 			request.setCharacterEncoding("utf-8");
+			
 			String realpath = request.getServletContext().getRealPath("/img");
 			Path path = Paths.get(realpath);
 			if (!Files.exists(path)) {
 				Files.createDirectory(path);
 			}
-			Part part = request.getPart("chonAnh");
-			String namefile = Path.of(part.getSubmittedFileName()).getFileName().toString();
-			part.write(Paths.get(realpath.toString(), namefile).toString());
-			menu.setImg(namefile);
+			Part part = request.getPart("img");
+			String filenameUpload = part.getSubmittedFileName();
+			if(!"".equals(filenameUpload)) {
+				String namefile = Path.of(filenameUpload).getFileName().toString();
+				part.write(Paths.get(realpath.toString(), namefile).toString());
+				menu.setImg(namefile);
+			}
 
 			String tenmon = request.getParameter("tenMon");
 			float gia = Float.parseFloat(request.getParameter("gia"));
 			int loai = Integer.parseInt(request.getParameter("chonLoai"));
+			int trangthai = Integer.parseInt( request.getParameter("trangthai"));
 			loaimenu = daoloai.findbyid(loai);
 
 			menu.setTen_Mon_An(tenmon);
 			menu.setGia(gia);
 			menu.setLoaiMenu(loaimenu);
+			menu.setTrang_Thai(trangthai);
 
-			daomenu.insert(menu);
+			daomenu.update(menu);
+			System.out.println(daomenu.update(menu));
 
 			response.sendRedirect(request.getContextPath() + "/ThemMenuManager" + "?success=1");
 		} catch (Exception e) {
